--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,7 @@
 	},
 	"formatter": {
 		"indentStyle": "tab",
-		"indentSize": 2,
+		"indentWidth": 2,
 		"lineEnding": "lf",
 		"lineWidth": 120
 	},
